--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -118,7 +118,9 @@
             <h3> Notifications for all devices in {{chosen_building}}</h3>
             
             <div class="btn-toolbar mb-2 mb-md-0">
+                <a type="button" id="delete_building" href="{{url_for('dashboard',chosen_building=chosen_building)}}" class="btn btn-sm btn-outline-success">Refresh</a>
                 <button type="button" id="delete_building" class="btn btn-sm btn-outline-danger">Delete {{chosen_building}}</button>
+                
             </div>
             {%else %}
             <h3> All Notifications </h3> 
@@ -128,7 +130,7 @@
                 <table class="table table-striped table-sm">
                     <thead>
                         <tr>
-                            <th scope="col" class="text-center">#</th>
+                            
                             <th scope="col" class="text-center">Date</th>
                             <th scope="col" class="text-center">Alert-Level</th>
                             {% if not chosen_building and not chosen_device %}
@@ -144,9 +146,9 @@
                     </thead>
                     <tbody id="notification_body">
                         {% for notification in notifications%}
-                        <tr></tr>
+
                         <tr id="{{notification['_id']}}">
-                            <td class="text-center">{{loop.index}}</td>
+                            
                             <td class="text-center">{{notification["date"]}}</td>
                             <td class="text-center">{{notification["severity"]}}</td>
                             {% if not chosen_building and not chosen_device %}
